--- a/authen.html
+++ b/authen.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+<H2>FLOWDIARY ASSIGNMENT</H2>
+<form action="/ login" method="post">
+    <label for="email">email</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+    <input type="password" id="password" name="password" required><br><br>
+    <button type="submit">submit</button>
 
+</form>
+</html>
